--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     tools:context=".MainActivity">
 
    <ListView
-       android:id="@+id/firstaidsearch"
+       android:id="@+id/search_food"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
